<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    android:background="@color/FFDAD4D4">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        app:title="@string/actionbar_title4"
        app:titleMargin="10dp"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/carnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:textStyle="bold"
        android:hint="@string/car_reg_number"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:textStyle="bold"
        android:text="@string/car_colour"
        android:layout_margin="22dp"
        app:layout_constraintTop_toBottomOf="@+id/carnumber"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toLeftOf="@+id/color"
        app:layout_constraintTop_toBottomOf="@+id/color"
        >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/black" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue" />
        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red" />
    </RadioGroup>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/carnumber"
        app:layout_constraintRight_toRightOf="@+id/carnumber"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:textAllCaps="false"
        android:text="@string/submit"
        android:background="@drawable/button_design"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:layout_constraintLeft_toLeftOf="@+id/submit"
        app:layout_constraintRight_toRightOf="@+id/submit"
        android:layout_marginTop="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>