<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        app:title="@string/parking_slot"
        app:titleMargin="10dp"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />
    <!--<ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
-->
    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:textStyle="bold"
        android:layout_margin="22dp"
        android:textSize="22sp"
        android:text="@string/total_slots_10"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <TextView
        android:id="@+id/available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:textStyle="bold"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        tools:text="Available Slots : 5"
        app:layout_constraintTop_toBottomOf="@+id/total"
        android:layout_marginStart="22dp" />
  <!--  <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8A8282"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/available" />
-->
    <ListView
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/available"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout"
        app:layout_constraintLeft_toLeftOf="@+id/buttonLayout"
        app:layout_constraintRight_toRightOf="@+id/buttonLayout"
        android:layout_marginTop="30dp" />
<!--
    </ScrollView>
-->
</androidx.constraintlayout.widget.ConstraintLayout>